# something-rpg

./: .rgignore  export_presets.cfg  icon.svg.import  project.godot  rust.gdextension
addons/godot-vim/: godot-vim.gd  icon.svg.import
assets/sprout-land/Characters/: Basic Charakter Actions.png.import  Basic Charakter Spritesheet.png.import  Egg_And_Nest.png.import  Free Chicken Sprites.png.import  Free Cow Sprites.png.import  Tools.png.import
assets/sprout-land/Objects/: Basic_Furniture.png.import  Basic_Grass_Biom_things.png.import  Basic_Plants.png.import  Basic_tools_and_meterials.png.import  Chest.png.import  Egg_item.png.import  Free_Chicken_House.png.import  Paths.png.import  Simple_Milk_and_grass_item.png.import  Wood_Bridge.png.import
assets/sprout-land/Sprout Lands color pallet/: Sprout Lands defautlt palette snip.PNG.import  Sprout Lands defautlt palette.png.import
assets/sprout-land/Tilesets/: Bitmask references 1.png.import  Bitmask references 2.png.import  Doors.png.import  Fences.png.import  Grass.png.import  Hills.png.import  Tilled_Dirt.png.import  Tilled_Dirt_Wide.png.import  Tilled_Dirt_Wide_v2.png.import  Tilled_Dirt_v2.png.import  Water.png.import  Wooden_House_Roof_Tilset.png.import  Wooden_House_Walls_Tilset.png.import
rust-gdext/: Cargo.toml
rust-gdext/.cargo/: config.toml
rust-gdext/src/: dirt_tiles.ron  lib.rs  pg_tilemap.rs  tile.rs
scenes/: dirt_layer.tscn  mai95F.tmp  main.tscn  tilemap_controller.gd
scripts/: player.gd
tilesets/: tileset1.tres
tilesets/tiles_json/: dirt_tiles.json
tilesets/tiles_ron/: dirt_tiles.txt
