[package]
name = "gdext"
version = "0.1.0"
edition = "2021"

[lib]
name = "gdext"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext.git", version = "0.2.0", features = ["experimental-wasm", "lazy-function-tables"] }
rand = "0.8.5"
ron = "0.8.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
